# b_logger

./: .gitignore  LICENSE  README.md  README_pypi.md  README_ru.md  b_logger.config.yaml  blog.config.yaml  blog.notes.yaml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
b_logger/: .gitignore  __init__.py  blog.py  config.py  html_gen.py  integrations.py  logger.config.yaml  logger_config.py  plugin.py  report_gen.py  runtime.py  setup.py
b_logger/entities/: attachments.py  exceptions.py  modules.py  preconditions.py  prints.py  py_addons.py  reports.py  statuses.py  steps.py  tests.py
b_logger/generators/: html_gen.py  report_gen.py
b_logger/integrations/: allure_integration.py
b_logger/templates/: base_macros.html  base_template.html  base_template_dev.html  css.html  dev.css  macros.html  macros_dev.html  scripts.js  styles.css  summary_macros.html  summary_template.html
b_logger/utils/: basedatamodel.py  browser_adapters.py  contextdecorator.py  dotdict.py  formatters.py  html.py  json_handler.py  paths.py  py_addons.py
tests/: conftest.py  test_aaa.py  test_attachments.py  test_main.py  test_main_aaa.py  test_main_bbb.py  test_marks.py  test_params.py  test_playwright.py  test_selenium.py
