[project]
name = "b_logger"
version = "1.0.0"
description = """
    BLogger is a Pytest plugin for enhanced test logging and reporting.
    It supports structured test steps, descriptions, info notes, known bugs, and automatic screenshots.
    Works seamlessly with Selenium WebDriver and Playwright Page instances.
    Integrates with Allure and Qase for fewer duplicates like .steps, .attach etc.
    """
readme = "README.md"
authors = [{name="serpuhovvv", email="pudikovserg@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    'pytest',
    'pytest-xdist',
    'pyyaml',
    'filelock',
    'Jinja2'
]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


[project.optional-dependencies]
extra = [
    "selenium",
    "playwright",
    "pytest-playwright",
    "allure-pytest",
    "qase-pytest"
]


[project.entry-points.pytest11]
b_logger = "b_logger.plugin"


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["b_logger*"]


[tool.setuptools.package-data]
b_logger = ["templates/*.html"]
