[project]
name = "pytest-b-logger"
version = "1.0.4"
description = "BLogger is a Pytest plugin for enhanced test logging and generating convenient and lightweight reports.
readme = "README.md"
authors = [
    {name="serpuhovvv", email="pudikovserg@gmail.com"}
]
maintainers = [
    { name = "serpuhovvv", email = "pudikovserg@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    'pytest',
    'pyyaml',
    'filelock',
    'Jinja2',
    'python-dateutil'
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3.12"
]


[project.urls]
Repository = "https://github.com/serpuhovvv/b_logger"


[project.optional-dependencies]
extra = [
    "pytest-xdist",
    "selenium",
    "playwright",
    "pytest-playwright",
    "allure-pytest",
    "qase-pytest"
]


[project.entry-points.pytest11]
b_logger = "b_logger.plugin"


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["b_logger*"]


[tool.setuptools.package-data]
b_logger = ["templates/*.html", "templates/*.css", "templates/*.js", "templates/*.svg"]
